--- a/Resources/jquery.mobile-1.4.5/demos/intro/index.html
+++ b/Resources/jquery.mobile-1.4.5/demos/intro/index.html
@@ -52,7 +52,7 @@
 
 		<p>Inside your content container, you can add any standard HTML elements - headings, lists, paragraphs, etc. You can write your own custom styles to create custom layouts by adding an additional stylesheet to the <code>head</code> after the jQuery Mobile stylesheet.</p>
 
-		<p>jQuery Mobile includes a wide range of touch-friendly UI widgets: <a href="../forms/">form elements</a>, <a href="../collapsible/">collapsibles</a>, <a href="../collapsibleset/">collapsible sets</a> (accordions), <a href="../popup/">popups</a>, <a href="../pages-dialog/">dialogs</a>, <a href="../table-column-toggle/">responsive tables</a>, and much more. For best performance, use the <a href="http://jquerymobile.com/download-builder/" rel="external">download builder</a> to pick the components you need.</p>
+		<p>jQuery Mobile includes a wide range of touch-friendly UI widgets: <a href="../forms/">form elements</a>, <a href="../collapsible/">collapsibles</a>, <a href="../collapsibleset/">collapsible sets</a> (accordions), <a href="../popup/">popups</a>, <a href="../pages-dialog/">dialogs</a>, <a href="../table-column-toggle/">responsive tables</a>, and much more. For best performance, use the <a href="http://jquerymobile.com/download-citizen/" rel="external">download citizen</a> to pick the components you need.</p>
 
 		<h3>Listviews</h3>
 
