--- a/Resources/jquery.mobile-1.4.5/demos/backbone-requirejs/index.html
+++ b/Resources/jquery.mobile-1.4.5/demos/backbone-requirejs/index.html
@@ -26,7 +26,7 @@
 	<div role="main" class="ui-content jqm-content">
 
       <h1>jQuery Mobile, Backbone.js and Require.js</h1>
-      <p>jQuery Mobile provides an <strong>HTML5-based user interface for all popular mobile device platforms</strong>, but it does not influence how you organize and structure your app's JavaScript.  Many jQuery Mobile users turn to a variety of other popular third-party libraries, including MV* frameworks and dependency management tools, to help structure their code.
+      <p>jQuery Mobile provides an <strong>HTML5-based user interface for all popular mobile device platforms</strong>, but it does not influence how you organize and structure your app's JavaScript.  Many jQuery Mobile users turn to a variety of other popular third-party libraries, including MV* frameworks and dependency management lostitems, to help structure their code.
       </p>
 
 	  <h2>Backbone and Require.js</h2>
