--- a/html/payment.html
+++ b/html/payment.html
@@ -122,7 +122,7 @@
 
         </div>
 
-        <div id="checkout-success" style="display: none">
+        <div id="checkout-success" style="display:none">
             <br>
             <br>
 
@@ -140,6 +140,12 @@
                 <p>Payment Information</p>
                 <p class="payment-p" id="">**** **** **** <span id="Card"></span></p>
                 <p class="payment-p" style="font-size: 11px;"> Your order will be processed in lkr</p>
+            </div>
+
+            <br>
+
+            <div class=" button-container" style="width: 60% !important;margin: auto">
+               <a href="Dashboard.html" rel="external"><button class="login-button ui-btn ui-btn-inline rounded-button" style="color: #ef963a !important;">Back to home</button></a>
             </div>
 
             <p style="
