--- a/html/Catagories.html
+++ b/html/Catagories.html
@@ -47,6 +47,11 @@
         </div>
         <div role="main" class="favourites ui-content">
 
+            <div class="loader">
+                <img class="loader-gif" src="./../images/giphy.gif">
+                <p> The goodest bois are finding the categories..</p>
+            </div>
+
             <div class="main category-items">
 
 
