--- a/html/Promotions.html
+++ b/html/Promotions.html
@@ -48,7 +48,7 @@
         <div role="main" class="promotions-page-thing ui-content">
             <div class="loader">
                 <img class="loader-gif" src="./../images/giphy.gif" />
-                <p>The goodest bois are finding the products..</p>
+                <p>The goodest bois are finding the promotions..</p>
             </div>
             <div class=" products-items">
 
