--- a/html/payment.html
+++ b/html/payment.html
@@ -57,6 +57,7 @@
         <div data-role="popup" id="cart-error" data-theme="" class="ui-corner-all">
             <div style="padding:10px 20px;">
                 <img style="width: 200px;margin: auto;display: block;" src="../images/AW331857_12.gif" alt="">
+                <h2 style="color: #ff647c !important; text-align: center">Checkout Failed.Please try again.</h2>
             </div>
         </div>
 
