--- a/html/PromotionProducts.html
+++ b/html/PromotionProducts.html
@@ -58,6 +58,22 @@
             <br />
         </div>
 
+        <div data-role="popup" id="cart-success" data-theme="" class="ui-corner-all">
+            <div style="padding:10px 20px;">
+                <img style=" width: 200px;margin: auto;display: block;" src="../images/addtocart-success.gif" alt="">
+                <h2 style="color: #93dfca;">Item added to cart.</h2>
+            </div>
+        </div>
+
+
+        <div data-role="popup" id="cart-error" data-theme="" class="ui-corner-all">
+            <div style="padding:10px 20px;">
+                <img style="width: 200px;margin: auto;display: block;" src="../images/AW331857_12.gif" alt="">
+                <h2 style="color: #ff647c;">Something went wrong.</h2>
+            </div>
+        </div>
+
+
         <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
             <div data-role="navbar" data-iconpos="bottom">
                 <ul>
